Fixed images on safari

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,11 +74,13 @@
 		padding: 2em;
 		display: flex;
 		flex-direction: column-reverse;
+		align-items: flex-start;
 		text-align: center;
 		border-radius: 20px;
 		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
 		&-img {
+			width: 100%;
 			margin: 1.4em 0;
 		}
 	}
